  non-letter-or-digit unquoted cookie value characters is now
  ``!#$%&'*+-.^_`|~/: =<>()[]{}?@``.  See
  http://tools.ietf.org/html/rfc6265#section-4.1.1 for more information.

- Cookie names are now restricted to the set of characters expected by RFC
  6265.  Previously they could contain unsupported characters such as ``/``.

1.2.3
------------

* Maintainership transferred to `Pylons Project <http://www.pylonsproject.org/>`

* Fix parsing of form submissions where fields have
  transfer-content-encoding headers.

1.2.2
------------

* Fix multiple calls to ``cache_expires()`` not fully overriding the
  previously set headers.

* Fix parsing of form submissions where fields have different encodings.


1.2.1
------------

* Add index page (e.g., ``index.html``) support for
  :class:`webob.static.DirectoryApp`.

* Detect mime-type when creating a test request with file uploads
  (``Request.blank("/", POST=dict(file1=("foo.jpg", "xxx")))``)

* Relax parsing of ``Accept`` and ``Range`` headers to allow
  uppercase and extra whitespace.

* Fix docs references to some deprecated classes.


1.2
------------

* Fix :mod:`webob.client` handling  of connection-refused on Windows.

* Use ``simplejson`` in :mod:`webob.request` if present.

* Fix ``resp.retry_after = <long>`` interpreting value as a UNIX timestamp
  (should interpret as time delta in seconds).


1.2rc1
------------

* Add ``Response.json`` and ``Request.json`` which reads and sets the
  body using a JSON encoding (previously only the readable attribute
  ``Request.json_body`` existed).  ``Request.json_body`` is still
  available as an alias.

* Rename ``Response.status_int`` to ``Response.status_code`` (the
  ``.status_int`` name is still available and will be supported
  indefinitely).

* Add ``Request.text``, the unicode version of the request body
  (similar to ``Response.text``).

* Add :mod:`webob.client` which contains the WSGI application